<!-- activity_login.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/bg"
    tools:context=".view.LoginActivity">

    <TextView
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_screen"
        android:textSize="34sp"
        android:textColor="@color/purple_700"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"/>

    <EditText
        android:textSize="24sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/bg_simple"
        android:id="@+id/usernameEditText"
        android:layout_width="625dp"
        android:layout_height="62dp"
        android:layout_marginTop="70dp"
        android:hint="@string/username_hint"
        android:textColor="@color/purple_700"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:minHeight="48dp" />


    <EditText
        android:textSize="24sp"
        android:id="@+id/passwordEditText"
        android:layout_width="625dp"
        android:layout_height="62dp"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/purple_700"
        android:hint="@string/password_hint"
        android:background="@drawable/bg_simple"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:textSize="24sp"
        android:id="@+id/loginButton"
        android:layout_width="625dp"
        android:layout_height="62dp"
         android:layout_marginTop="18dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login_button" />


    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:textSize="24sp"
        android:textColor="@color/purple_700"
        android:text="@string/register_text" />

</LinearLayout>
